doc: improve README.md with additional usage details

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ allprojects {
   sourceCompatibility = 1.8
   targetCompatibility = 1.8
 
-  group = 'com.clouway.testing.datastore'
+  group = 'com.clouway.testing'
   version = '0.0.1'
 
   modifyPom {
