--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
   }
 
   dependencies {
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.21"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.10"
     classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
   }
 }
@@ -26,7 +26,7 @@ allprojects {
   targetCompatibility = 1.8
 
   group = 'com.clouway.testing'
-  version = '0.0.2'
+  version = '0.0.3'
 
   modifyPom {
     project {
@@ -84,9 +84,9 @@ configurations {
 
 dependencies {
   
-  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.21"
-  compile "org.testcontainers:testcontainers:1.11.4"
-  compile "com.google.cloud:google-cloud-datastore:1.83.0"
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.10"
+  compile "org.testcontainers:testcontainers:1.15.0-rc2"
+  compile "com.google.cloud:google-cloud-datastore:1.105.0"
   
   compile "junit:junit:4.12"
 }
