--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
   }
 
   dependencies {
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.10"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
     classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
   }
 }
@@ -26,7 +26,7 @@ allprojects {
   targetCompatibility = 1.8
 
   group = 'com.clouway.testing'
-  version = '0.0.3'
+  version = '0.0.4'
 
   modifyPom {
     project {
@@ -84,8 +84,8 @@ configurations {
 
 dependencies {
   
-  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.10"
-  compile "org.testcontainers:testcontainers:1.15.0-rc2"
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.31"
+  compile "org.testcontainers:testcontainers:1.17.3"
   compile "com.google.cloud:google-cloud-datastore:1.105.0"
   
   compile "junit:junit:4.12"
